--- a/src/yml/npcs/hb3.yml
+++ b/src/yml/npcs/hb3.yml
@@ -2,31 +2,46 @@
 name: Bestigor (HB3)
 masks: 0
 picture: hb3.jpg
-description: []
-roleplay: []
+description: 
+  - Énorme
+  - Ours humanoïde
+  - Grogne
+  - Montre les dents
+tactics:
+  - Intimidate
+  - Sweep si plusieurs, sinon deux attaques
+special:
+  - Smarts roll when out of Shaken. If fail, does not remember why here and will leave
 motivation: []
 quotes: []
-edges: []
-hindrances: []
+edges:
+  - Sweep
+hindrances:
+  - Stupid
 stats:
   pace: '6'
   charisma: '0'
   agility: D6
-  smarts: D6
+  smarts: D4
   spirit: D6
-  strength: D6
-  vigor: D6
-  parry: 5
-  toughness: 6
+  strength: D10
+  vigor: D12
+  parry: 4
+  toughness: 10
   wounds: 1
-  fighting: D6 / 2D6
-  shooting: D6 / 2D6
-  spellcasting: D6 / 15PP
+  fighting:
+    - D8 + 1 / 2D10 + 1 (Trunk)
+    - D8 - 1 / D10 + D4 (Bite)
+  shooting: D4 / D10 (Rocks)
 skills:
-- Guts D6
-- Notice D6
-- Stealth D6
+  - Climbing D4
+  - Guts D8
+  - Intimidation D10
+  - Notice D6
+  - Stealth D8
+  - Survival D6
+  - Tracking D8
 spells: []
 gear:
-- Sword
-- Leather Armor
+- Tronc d'arbre clouté
+- Morceaux d'armure de plate
