--- a/src/yml/npcs/beotor.yml
+++ b/src/yml/npcs/beotor.yml
@@ -36,15 +36,18 @@ stats:
   toughness: 10
   wounds: 3
   fighting: D8 / D6 + D8
-  spellcasting: D8 / 15PP
+  spellcasting: 
+    - D8 / Armor (2PP)
+    - D8 / Smite (2PP)
+    - D8 / Healing (3PP)
 skills:
 - Guts D8
 - Intimidation D8
 - Notice D6
 - Healing D8
 spells:
-- Armor (2PP, +2/+4 Toughnessr)
-- Smite (2PP, +2/+4 Damage)
-- Healing (3PP, +1/+2 Wounds)
+  - Armor
+  - Smite
+  - Healing
 gear: Hammer. Plate. Sigmar memorabilia
 
