--- a/src/yml/npcs/hb4.yml
+++ b/src/yml/npcs/hb4.yml
@@ -2,31 +2,41 @@
 name: Giant Beast
 masks: 0
 picture: giant-beast.jpg
-description: []
+description:
+  - Huge
+  - Smashes everything
+  - Stomps on everything
 roleplay: []
-motivation: []
+motivation:
+  - Breaking the walls
+  - Destroying houses
 quotes: []
-edges: []
+edges:
+  - Improved Sweep (Smash)
+  - Size +4
 hindrances: []
+special:
+  - Smash (All around, opposed Strength or Shaken)
+  - +2 to be hit (Big)
 stats:
-  pace: '6'
-  charisma: '0'
+  pace: 8
+  charisma: 0
   agility: D6
-  smarts: D6
+  smarts: D4
   spirit: D6
-  strength: D6
-  vigor: D6
-  parry: 5
-  toughness: 6
-  wounds: 1
-  fighting: D6 / 2D6
-  shooting: D6 / 2D6
-  spellcasting: D6 / 15PP
+  strength: D12+3
+  vigor: D12
+  parry: 6
+  toughness: 12
+  wounds: 3
+  fighting:
+    - D8 / D12+D6+3 (Fists)
+    - D8 / Smash around
+  shooting: D6 / D12+D4+3 (Rocks)
 skills:
-- Guts D6
-- Notice D6
-- Stealth D6
+- Guts D8
+- Intimidation D8
+- Notice D4
 spells: []
 gear:
-- Sword
-- Leather Armor
+- Naked
