Adding Muutwaug spells

--- a/src/yml/custom/aftermarth-01.yml
+++ b/src/yml/custom/aftermarth-01.yml
@@ -4,5 +4,27 @@ content: >
   Chaque face réduit son niveau de munition de 1 (Very High, High, Low, Out). -1
   par échec critique.
 
+  Vigor Roll pour chaque mort. Failure, vraiment mort. Sinon Infirmerie.
+
+  Distribuer une carte pour Forge, Infirmerie, Bartholomeus et Auberge. Si Club,
+  problème avec ce batiment (-2 au jet, perte de rations, etc). Si Joker,
+  excellent événement.
+
+  Bartholomeus peut tenter de fabriquer deux potions. D8 Check pour chaque.
+  Réussite et Raise donne une potion (max 3 Soin, 3 Poison, 12 Explosion).
+
+  Infirmerie: Lilith et Beotor peuvent chacun soigner 6 personnes. 1 Heal sur
+    NPC le rends passif (aide, mais ne combat pas). 2 Heal, le remette sur pied.
+
+  Calcul de moral: +1 par mur défendu, -2 par mur envahi, +1 par acte de
+    réussite, -1 par NPC important décédé.
+
+  ---
+
+  Rudolf prévoit autre attaque avant la tombée de la nuit. Entends bruits de
+  scie et de construction dans les bois.
+
+  Il faut protéger les murs et les portes, ne pas les laisser rentrer.
+
 
   
