--- a/src/yml/monsters/lizardfolk.yml
+++ b/src/yml/monsters/lizardfolk.yml
@@ -12,8 +12,10 @@ roleplay:
   - Bêtes sauvages
   - Veulent s'enfuir
 motivation:
+  - Tuer défenseurs
   - Pris entre deux feux
   - Chair à canon
+  - Ouvrir portes si laissé seul
 quotes: []
 edges: []
 hindrances: []
@@ -27,7 +29,7 @@ stats:
   vigor: D6
   parry: 5
   toughness: 5
-  wounds: 1
+  wounds: 0
   fighting: D6 / 2D6
   shooting: D6 / 2D6
 skills:
