--- a/src/yml/npcs/muutwaug.yml
+++ b/src/yml/npcs/muutwaug.yml
@@ -2,30 +2,51 @@
 name: Muutwaug
 masks: 0
 picture: muutwaug.jpg
-description: []
-roleplay: []
-motivation: []
-quotes: []
+description:
+  - Corbeaux posés sur les toits
+  - Harlequin coloré
+  - Large chapeau qui cache son visage
+roleplay:
+  - Enigmatique
+  - Laisse les autres s'entretuer
+motivation:
+  - Rester en vie
+  - Isoler le porteur de la dague
+  - Empecher que Skinner n'ait la dague
+quotes:
+  - "À quoi bon lutter, laissez-vous faire"
+  - "Tout cela vous dépasse"
+  - "Dire que tout aurait pu être plus simple"
 edges: []
 hindrances: []
+special:
+  - No PP
+  - -1 Spellcasting / maintained spell
+  - Deflection always
+  - Teleport, Fear si au contact
+  - Barrier, Darkness, Sleep, Charm pour isoler Dague
 stats:
-  pace: '6'
-  charisma: '0'
+  pace: 6
+  charisma: +2
   agility: D6
-  smarts: D6
-  spirit: D6
-  strength: D6
-  vigor: D6
-  parry: 5
-  toughness: 6
-  wounds: 1
-  fighting: D6 / 2D6
-  shooting: D6 / 2D6
-  spellcasting: D6 / 15PP
+  smarts: D12+2
+  spirit: D12
+  strength: D10
+  vigor: D10
+  parry: 7
+  toughness: 12
+  wounds: 3
+  fighting: D10 / D10 + D6
+  spellcasting:
+    - D12 / Deflection
+    - D12 / Teleport
+    - D12 / Fear
 skills:
-- Guts D6
-- Notice D6
-- Stealth D6
+  - Intimidation D12
+  - Guts D12
+  - Notice D10
+  - Stealth D10
+  - Spellcasting D12+1
 spells: []
 gear:
 - Sword
