--- a/src/yml/custom/impossible-choice-ilyor.yml
+++ b/src/yml/custom/impossible-choice-ilyor.yml
@@ -11,8 +11,11 @@ content: >
 
     - Quelqu'un hésite entre trahir ses amis et trahir sa famille (Karf)
     - Quelqu'un hésite entre sauver sa vie, ou tuer un ami (Alessandro)
-    - Quelqu'un hésite à se sacrifier pour sauver des inconnus (Wolfgang)
+    - Quelqu'un hésite à sacrifier le village pour sauver sa vie (Wolfgang)
     - Quelqu'un hésite à sacrifier un inconnu pour sauver sa propre vie (Beotor)
-    - Quelqu'un hésite à tuer ses amis pour leur épargner la souffrance (Rudolf)
+    - Quelqu'un hésite à sacrifier des inconnus pour sauver le village (Rudolf)
+    - Quelqu'un hésite à sacrifier le village pour détruire une menace très grave (Otto)
+    - Quelqu'un hésite à se sacrifier pour accélerer les choses (Hanzi)
+    - Quelqu'un hésite à se sacrifier pour sauver sa famille (Wulfric)
 
   
