--- a/src/yml/custom/impossible-choice-wolfgang.yml
+++ b/src/yml/custom/impossible-choice-wolfgang.yml
@@ -19,8 +19,8 @@ content: >
   ainsi que l'armée. Une fois qu'il aura retrouvé l'œuf, il fera de toi un
   Empereur. Si tu lui amène la dague en plus, il épargne le village et tes amis.
 
-  Il te laisse réfléchir. Il te recontactera bientot. Tu comprendra quand sera
-  venu le moment de choisir.
+  Il te laisse réfléchir. Il te proposer un moyen de le rejoindre bientot. Tu
+  comprendra quand ça arrivera.
 
   HRP: Bientot la fin de la campagne. Possibilité de finir en beauté, de faire
     de Wolfgang le grand méchant de la campagne suivante.
