--- a/src/yml/custom/wave-01.yml
+++ b/src/yml/custom/wave-01.yml
@@ -1,7 +1,7 @@
 ---
 name: Vague 1 (Tester défenses)
 content: >
-  Knowledge Rudolf pour carte supplémentaire. Brouillard, soleil baisse.
+  Knowledge Rudolf pour carte supplémentaire. Chaleur étouffante, soleil aveugle.
 
   64": [WS], 10 Lizardfolk sont poussés vers le fort
 
