--- a/src/yml/npcs/otto.yml
+++ b/src/yml/npcs/otto.yml
@@ -2,31 +2,46 @@
 name: Otto Von Lufthaunser
 masks: 0
 picture: otto.jpg
-description: []
-roleplay: []
-motivation: []
-quotes: []
+description:
+  - Parle à ses pistolets (Gretel et Vera)
+  - Ne semble pas écouter
+roleplay:
+  - Excité par le combat à venir comme un enfant le jour de son anniversaire
+motivation:
+  - Se moque des pertes humaines, veut tuer Skinner
+quotes: 
+  - Je l'ai traqué pendant des mois et maintenant il vient à moi
+  - Merci à vous et votre dague, vous l'avez attiré ici, enfin!
+  - C'est une belle nuit pour mourir. Merci
 edges: []
 hindrances: []
 stats:
   pace: '6'
   charisma: '0'
-  agility: D6
-  smarts: D6
-  spirit: D6
-  strength: D6
-  vigor: D6
-  parry: 5
-  toughness: 6
-  wounds: 3
-  fighting: D6 / 2D6
-  shooting: D6 / 2D6
-  spellcasting: D6 / 15PP
+  agility: D10
+  smarts: D8
+  spirit: D10
+  strength: D8
+  vigor: D8
+  parry: 6
+  toughness: 8
+  wounds: 1
+  fighting: D8 / 2D8
+  shooting: 
+    - D10 / 2D6
+    - D10 / 2D6+1
+    - D10 / 2D6
 skills:
-- Guts D6
-- Notice D6
-- Stealth D6
+- Guts D10+2
+- Notice D8
+- Stealth D8
+- Survival D8
+- Tracking D8
+- Intimidation D8
+- Taunt D8
 spells: []
 gear:
-- Sword
-- Leather Armor
+  - Gretel et Vera
+  - Enchanted amulet (Witch Hunter, Guts +2)
+  - Sword
+  - Mail Armor
