All cards for the last siege

--- a/src/yml/custom/impossible-choice-ilyor.yml
+++ b/src/yml/custom/impossible-choice-ilyor.yml
@@ -18,4 +18,6 @@ content: >
     - Quelqu'un hésite à se sacrifier pour accélerer les choses (Hanzi)
     - Quelqu'un hésite à se sacrifier pour sauver sa famille (Wulfric)
 
+  Morr va réclamer beaucoup de vie, parties trop tôt, ou pour les mauvaises raisons.
+
   
