--- a/src/yml/custom/impossible-choice-wolfgang.yml
+++ b/src/yml/custom/impossible-choice-wolfgang.yml
@@ -1,9 +1,10 @@
 ---
 name: "[Impossible Choice] Wolfgang"
 content: >
-  Tu as un flash. Tu vois le village assailli de toutes parts par des
-  Hommes-Betes. Ils escaladent les murailles avec des échelles, mettent le feu
-  aux maisons, tuent tout le monde.
+  Tu as un flash. Tu vois l'attaque en acceléré (lui donner les dispositions des
+  ennemis si demande). Le village assailli de toutes parts par des Hommes-Betes.
+  Ils escaladent les murailles avec des échelles, mettent le feu aux maisons,
+  tuent tout le monde.
 
   Tu sens que ce soir est sans doute ton dernier jour à vivre.
 
@@ -17,10 +18,10 @@ content: >
 
   Si tu le rejoins, il fait de toi son général. Skinner sera sous tes ordres,
   ainsi que l'armée. Une fois qu'il aura retrouvé l'œuf, il fera de toi un
-  Empereur. Si tu lui amène la dague en plus, il épargne le village et tes amis.
+  Empereur. Pour ça, il a besoin que tu lui apporte la dague.
 
   Il te laisse réfléchir. Il te proposer un moyen de le rejoindre bientot. Tu
   comprendra quand ça arrivera.
 
   HRP: Bientot la fin de la campagne. Possibilité de finir en beauté, de faire
-    de Wolfgang le grand méchant de la campagne suivante.
+    de Wolfgang le grand méchant de la campagne suivante plutot que de mourir sur le champ de bataille.
