--- a/src/yml/custom/rudolf-speech.yml
+++ b/src/yml/custom/rudolf-speech.yml
@@ -15,7 +15,7 @@ content: >
 
   ---
 
-  [État-Major. Rudolf, Hanzi, Otto, Beotor, PJs]
+  [État-Major. Rudolf, Hanzi, Otto, Beotor, Wulfric, PJs]
 
   Avantage, coup dur en tuant le Shaman, et en équipant les troupes. Obligés de
   venir au contact. Notre avantage, les défenses.
