--- a/src/yml/custom/walls.yml
+++ b/src/yml/custom/walls.yml
@@ -5,7 +5,7 @@ content: >
 
   Saut: Agility check, ou 2D6 dégats.
 
-  Toughness 18 (Toughness 16), pas d'Ace ni de Raise sur les dégats. Détruits au
+  Toughness 18 (Toughness 16 portes), pas d'Ace ni de Raise sur les dégats. Détruits au
   bout de 3 Wound. Chaque Wound laisse passer 1HB / round.
 
   De l'intérieur, ouvrir les portes nécessite un jet de Lockpicking pour laisser
