--- a/src/yml/custom/wave-02.yml
+++ b/src/yml/custom/wave-02.yml
@@ -1,36 +1,27 @@
 ---
-name: Vague 2 (Réelle attaque. Fini de justesse)
+name: Vague 2 (Réelle attaque. Porte brisée)
 content: >
-  Knowledge Rudolf pour carte supplémentaire. Nuit tombe, tambours jouent.
-  
-  Moral (Spirit + Charisma) de chaque leader, avec Bonus généraux. +1 Benny pour
-  l'équipe si réussite.
+  Chaleur moins forte, nuit douce. -1 nuit, light short range autour village.
 
-  Tambours s'arretent, armée avance en hurlant, de tous les cotés à la fois. -2
-  car nuit. HB portent des échelles (1 pour 3)
+  Tambours s'arretent, armée avance en hurlant, de tous les cotés à la fois.  HB1 portent des échelles (1 pour 3)
 
-  [NS]: 5HB0, 8HB1, 2HB3 / [WE]: 5HB0, 10HB1
+  [N] Bélier [E] 15HB0. [SW] 9HB1,1HB3 (3 ladders, can choose target).
 
-  (1-2): HB0 foncent (Notice -2). HB1/HB3 Out.
+  1: [N] 7/9 (Long) [E] 11/15 (Long, Forest) [SW] 9/13
 
-  (3): HB0 Long Range. HB1/HB3 Long Range.
+  2: [N] 7/9 [E] 11/15 [SW] 9/13
+ 
+  3: [N] 7/9 [E] 7/11 (Medium, Out of Forest) [SW] 9/13
+ 
+  4: [N] 5/7 (Medium) [E] 4/8 (Short, in Light) [SW] 7/11 (Medium)
+ 
+  5: [N] 5/7 [E] 4/8 (climb D6, +2 to be hit, only melee. Opposed STR to drop, or shaken + fail agility) [SW] 7/11
 
-  (4): HB0 Long Range. HB1/HB3 Long Range.
+  6: [N] 2/4 (Short) [E] Melee -2 (getting inside) [SW] 4/8 (Short)
 
-  (5): HB0 Medium Range. HB1/HB3 Long Range.
+  7: [N] Break Door (D12+D6+3 / 16, 3 wounds) [E] Melee [SW] Set ladders (STR, -2 per HB1 on it, to tip it off), Break Wall (2D10+1 / 18, 3 Wounds)
 
-  (6): HB0 Short Range. HB1/HB3 Medium Range.
+  8: [N] Break Door [E] Melee [SW] Climb ladders (Fighting -2), Break Wall
 
-  (7): HB0 Climbing (Tuent défenseurs). HB1/HB3 Medium Range.
+  ⚠ Focus PJs sur Door et Beast. Nuée corbeau sur autres faces si nécessaire
 
-  (8): HB1/HB3 Short Range.
-
-  (9): HB1/HB3 Contact. Mettent échelle. (Opposed STR pour repousser échelle,
-    collaborative)
-
-  (10): Grimpent, attaquent à -2, cherchent à laisser place pour les autres. Attaquent 
-
-  (20): Skinner sonnera la retraite
-
-
-  
