--- a/src/yml/custom/wave-03.yml
+++ b/src/yml/custom/wave-03.yml
@@ -1,17 +1,30 @@
 ---
-name: Vague 3 (Submergé, dernier carré)
+name: "Vague 3 (Feu, Apocalypse, Skinner)"
 content: >
-  Attaque surprise pendant Zizanie.
+  Fléches enflammées sur la ville. Batiments et barricades prennent feu. Cris de
+  charge des HB à l'exterieur.
 
-  Milieu de la nuit.
+  Hanzi monte sur les murailles. Rudolf et Wulfric vont aider à l'auberge. Otto
+  va aider au labo. Beotor cherche à s'enfuir. Lilith dans l'infirmerie.
 
-  Attaque coordonnée sur le point le plus faible.
+  PJs peuvent aider les batiments en flamme, ou monter sur les murailles tirer
+  sur assaillants. PNJs en background, sauvent la ville, focus sur action des
+  PJs.
 
-  HB0 avec armure d'argile piégée (explose quand tué)
+  HB0 avec armure d'argile piégé arrivent au pied des murailles dans 3 rounds
+  (10/14, 6/10, 4/8). 3D6 dégats autour si tués. Called Shot -2 pour éviter de
+  faire exploser.
 
-  Tirs de flèches enflammées sur village, batiment qui brulent.
+  Dramatic Task sur 3 batiments en même temps pour sauver les occupants.
+  S'écroule/explose au bout de 5 rounds, Skinner et Bloodhound arrivent au bout
+  de 3. Bloodhound sur porteur de dague, Skinner sur Von Friedrich.
 
-  Big Beast cachée sous protection de bois qui vient défoncer les portes
+  Auberge (STR ouvrir porte, Persuasion x2 sortir gens, VIG x2 resister feu).
+  Infirmerie (Persuasion x2 convaincre malades, STR x2 porter malades, VIG subir
+  feu). Labo (STR entrer dans batiment, Persuasion convaincre Bartholomeus, VIG
+  x2 subir feu, STR briser mur).
+  
 
-  Skinner + Bloodhound se joignent quand mur percé.
+
+
 
