--- a/src/yml/npcs/skinner.yml
+++ b/src/yml/npcs/skinner.yml
@@ -3,48 +3,49 @@ name: Skinner
 masks: 0
 picture: skinner.jpg
 description:
-- 1/ Glabre. Peau blême et translucide. Cliquetis armure
-- 2/ Écorché vif. Énervé
+  - Peau bleme, translucide. Cliquetis armure
+  - Démarche lente, posée, méthodique
 roleplay:
-- Provoque Von Friedrich
-- Overconfident
+  - Provoque Von Friedrich
+  - Overconfident
+  - Prends plaisir à être blessé
 motivation:
-- Se concentre sur Von Friedrich
-- Détruire le village
-- Récupérer la dague
+  - Se concentre sur Von Friedrich
+  - Veut se venger / l'empecher de prendre sa place
 quotes:
-- Attaquez ! Rasez-tout !
-- Von Friedriiiich
+  - Attaquez ! Rasez-tout !
+  - Trouvez cette dague !
+  - Von Friedriiiich
 special:
-- Transfo si wound (Guts -2 ou Shaken)
-- Skin dead (3 rounds => +1 Wound)
-- Si 1 Fighting, frappe cible random
+  - Fais peur si Wounded (Guts -2)
+  - Si passe 3 round sur cadavre, le skin et récupère 1 Wound
 edges:
-- 1/ Improved First Strike. Improved Counter Attack.
-- 2/ +2 Fighting, Dmg, Though. -2 Parry
+  - Improved First Strike (Infinite)
+  - Improved Counter Attack (no malus)
+  - Ignore 2 Wound Malus
 hindrances: []
 tactics:
-- Reste loin
-- Attaque seulement quand défenses tombées, avec son chien
+  - Combat en un contre un
+  - Centré sur Von Friedrich
 stats:
-  pace: '6'
+  pace: 6
   charisma: "-2"
   agility: D8
   smarts: D8
-  spirit: D8
+  spirit: D10
   strength: D10
   vigor: D10
   parry: 8
-  toughness: 9
+  toughness: 10
   wounds: 3
-  fighting: D10 / D10 + D8 (AP 2)
+  fighting: D10 / 2D8 (No Leather)
 skills:
-- Guts D10
-- Climbing D8
-- Intimidation D10
-- Notice D8
-- Stealth D10
+  - Guts D10
+  - Climbing D8
+  - Intimidation D10
+  - Notice D8
+  - Stealth D10
 spells: []
 gear:
-- Blood Sword
-- Bone Armor
+  - Blood Sword
+  - Bone Armor
